--- a/ASSIGMENT_MVC_ASP/Views/SanPhams/Index.cshtml
+++ b/ASSIGMENT_MVC_ASP/Views/SanPhams/Index.cshtml
@@ -3,10 +3,10 @@
 @{
     ViewBag.Title = "Index";
 }
-<link rel="stylesheet" href="~/Content/StyleTable.css" />
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-<h2>Index</h2>
 
+<h2>Index</h2>
+<link rel="stylesheet" href="~/Content/StyleTable.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -18,7 +18,9 @@
         <th>
             @Html.DisplayNameFor(model => model.TenSP)
         </th>
-
+        @* <th> *@
+        @*     @Html.DisplayNameFor(model => model.MieuTa) *@
+        @* </th> *@
         <th>
             @Html.DisplayNameFor(model => model.AnhSP)
         </th>
@@ -46,12 +48,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.TenSP)
             </td>
-
+            @* <td> *@
+            @*     @Html.DisplayFor(modelItem => item.MieuTa) *@
+            @* </td> *@
             <td>
-                <img src="@item.AnhSP" width="200px" />
+                <img src="@item.AnhSP" width="200px"/>
             </td>
             <td>
-                @item.GiaSP.ToString("#,##0").Replace(',', '.') VNĐ
+                @Html.DisplayFor(modelItem => item.GiaSP)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.XuatSu)
@@ -63,6 +67,7 @@
                 @Html.DisplayFor(modelItem => item.GioiTinh)
             </td>
             <td>
+
                 <button type="button" class="btn btn-success">
                     <a href="@Url.Action("Edit", "SanPhams", new {id = item.MaSP}) ">
                         <i class="fa fa-edit" style="color: white"></i>
@@ -76,8 +81,15 @@
                 </button>
 
                 <button type="button" class="btn btn-danger">
-                    <a href="@Url.Action("Delete", "SanPhams", new {id = item.MaSP}) " onclick="return confirm('Bạn có chắc muốn xóa sản phẩm ?')">
+                    <a href="@Url.Action("Delete", "SanPhams", new {id = item.MaSP}) ">
                         <i class="fa fa-trash" style="color: white"></i>
+                    </a>
+                </button>
+            </td>
+            <td>
+                <button type="button" class="btn" style="background: #0275d8">
+                    <a href="@Url.Action("ThemSanPham", "GioHang", new {msp = item.MaSP ,sl = 1}, null)">
+                        <i class="fa fa-shopping-cart" style="color: white"> &nbsp; Add to cart</i>
                     </a>
                 </button>
             </td>
