--- a/ASSIGMENT_MVC_ASP/Views/SanPhams/Index.cshtml
+++ b/ASSIGMENT_MVC_ASP/Views/SanPhams/Index.cshtml
@@ -10,6 +10,13 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@using (Html.BeginForm("Index", "SanPhams", FormMethod.Get))
+{
+<p>
+    Tìm kiếm : @Html.TextBox("TimKiem")   Danh mục: @Html.DropDownList("MaLoaiSanPham", "All") <input type="submit" value="Tìm kiếm" />
+</p>
+}
 <table id="Hero">
     <tr>
         <th>
@@ -52,7 +59,7 @@
             @*     @Html.DisplayFor(modelItem => item.MieuTa) *@
             @* </td> *@
             <td>
-                <img src="@item.AnhSP" width="200px"/>
+                <img src="@item.AnhSP" width="200px" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.GiaSP)
