--- a/ASSIGMENT_MVC_ASP/Views/Shared/_Layout.cshtml
+++ b/ASSIGMENT_MVC_ASP/Views/Shared/_Layout.cshtml
@@ -38,5 +38,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 </body>
 </html>
